# DeFocuser-Lite

./: .gitignore  LICENSE  README.md  build.cmd  build.ps1
3D Models/: BackPlate.stl  BodyM3.stl  BodyM4.stl  Button.stl  DeFocuser Lite.f3d
3D Models/BYJ Version/: BackPlateBYJ.stl  BodyBYJ.stl
3D Models/RedBox Conversion/: BackPlate.stl  Body.stl
AppV2/: ASCOM.DeKoi.DeFocuserApp.csproj  App.config  App.xaml  MainWindow.xaml  MainWindow.xaml.cs  PipeServer.cs  SerialManager.cs
AppV2/Installer/: Setup.iss
AppV2/Properties/: AssemblyInfo.cs  Settings.settings
AppV2/Themes/: Icons.xaml
AppV2/ViewModels/: Converters.cs  LogEntry.cs  MainViewModel.cs  ObservableObject.cs  RelayCommand.cs
Code/ASCOM_Driver/: ASCOM.DeKoi.DeFocuserLite.csproj  ASCOM.DeKoi.DeFocuserLite.sln  FocuserDriver.cs  FocuserSetupDialogForm.cs  FocuserSetupDialogForm.designer.cs  FocuserSetupDialogForm.resx
Code/Arduino_Firmware/: Arduino_Firmware.ino
Code/FocuserApp/: ASCOM.DeKoi.DeFocuserApp.csproj  App.config  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SerialManager.cs
Code/Focuser_App/: ASCOM.DeKoi.DeFocuserMediator.csproj  ASCOM.DeKoi.DeFocuserStandalone.csproj  ASCOM.DeKoi.DeFocuserStandalone.sln  MainForm.cs  (+4 more)
Code/Focuser_App-Legacy/: MainForm.cs  MainForm.resx  Program.cs
Code/INDI_Driver/: CMakeLists.txt  README.md  config.h.cmake  indi_defocuserlite.cpp  indi_defocuserlite.h  indi_defocuserlite.xml.cmake
Code/INDI_Driver/cmake_modules/: FindINDI.cmake
KiCad/: DeFocuser Lite BOM  DeFocuserLiteSMD.kicad_pcb  DeFocuserLiteSMD.kicad_pro  DeFocuserLiteSMD.kicad_sch
(+47 files in other folders)
